<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AniadirAlumno">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usuario"
        app:layout_constraintBottom_toTopOf="@id/txtContrasenia"
        app:layout_constraintEnd_toStartOf="@+id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="@+id/gHor1" />

    <EditText
        android:id="@+id/txtContrasenia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cintrase_a"
        app:layout_constraintBottom_toTopOf="@+id/btnInsertar"
        app:layout_constraintEnd_toStartOf="@+id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertar"
        app:layout_constraintBottom_toTopOf="@+id/gHor2"
        app:layout_constraintEnd_toStartOf="@+id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/txtContrasenia" />

</androidx.constraintlayout.widget.ConstraintLayout>